# prism

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  skills-lock.json
.github/workflows/: trader-docker-smoke.yml
apps/cli/: README.md  pyproject.toml
apps/cli/src/prism_cli/: __init__.py  __main__.py  app.py  client.py  config.py  demo.py  doctor.py  metrics.py  models.py  rendering.py  x402_signing.py
apps/cli/tests/: test_config_and_client.py  test_demo_command.py  test_distribution.py  test_doctor.py  test_inspect_command.py  test_market_commands.py  test_metrics.py  test_validate_client_protocol.py  test_validate_commands.py  test_x402_signing.py
apps/dashboard/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json  vitest.config.ts
apps/dashboard/__tests__/: admin-audit.test.ts  admin-runtime.test.ts  admin-schedule.test.ts  bridge-widget.test.ts  builder-fees.test.ts  by-address.test.ts  calibration-page.test.ts  components.test.ts  connector-crypto.test.ts  connector-smoke.test.ts  connector-url-policy.test.ts  connectors-api.test.ts  connectors-lib.test.ts  connectors-page.test.ts  history.test.ts  issue-ledger.test.ts  llms-route.test.ts  me-page.test.ts  og-image.test.ts  operator-auth.test.ts  operator-page.test.ts  public-api.test.ts  schemas.test.ts  stats.test.ts  submit-page.test.ts  trace-detail.test.ts  treasury-strip.test.ts  utils.test.ts  waitlist.test.ts  web3-provider.test.ts
apps/dashboard/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/dashboard/public/: manifest.json
apps/docs/: Dockerfile  next.config.mjs  package.json  railway.toml  tsconfig.json
apps/docs/__tests__/: docs-content.test.ts
apps/docs/app/: globals.css  layout.tsx  page.tsx
apps/docs/components/: prism-wordmark.tsx  site-footer.tsx
apps/docs/lib/: layout.shared.tsx
apps/docs/openapi/: prism-public-api.yaml
apps/mcp/: Dockerfile  pyproject.toml  railway.toml
apps/mcp/src/prism_mcp/: __init__.py  __main__.py  server.py
apps/mcp/src/tests/: test_mcp.py
apps/pitch-video/: README.md  package.json  tsconfig.json
apps/pitch-video/higgsfield/: broll-prompts.json
apps/pitch-video/scripts/: generate-higgsfield-broll.mjs  generate-showcase-audio.mjs
apps/pitch-video/src/: PrismPitch.tsx  PrismShowcase.tsx  brand.ts  index.tsx
apps/polymarket-gateway/: Dockerfile  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json  vitest.config.ts
apps/polymarket-gateway/scripts/: bootstrap-clob-creds.ts
apps/polymarket-gateway/src/: app.ts  builder.ts  clob.ts  db.ts  env.ts  geofence.ts  index.ts  markets.ts  polling.ts  trade.ts
apps/polymarket-gateway/tests/: api.test.ts  builder.test.ts  geofence.test.ts  live-trading.test.ts  markets.test.ts  polling.test.ts  routes.test.ts  token-id-resolution.test.ts  trade-size.test.ts  trade.test.ts
apps/sentinel/: Dockerfile  pyproject.toml  railway.toml
apps/sentinel/src/sentinel/: __init__.py  __main__.py  adversarial.py  agent.py  chain.py  demo_evidence_mcp.py  evidence_extraction.py  evidence_tools.py  ipfs.py  issues.py  main.py  market_evidence_mcp.py  persistence.py  prompts.py  resolution_loop.py  validation.py  x402_middleware.py
apps/sentinel/src/tests/: test_calibration.py  test_cross_area_integration.py  test_demo_evidence_mcp.py  test_evidence_budget.py  test_evidence_cache.py  test_evidence_circuit_breaker.py  test_evidence_endpoint.py  test_evidence_extraction.py  test_evidence_integration.py  test_evidence_tools.py  test_issue_ledger.py  test_market_evidence_mcp.py  test_resolution_loop.py  test_sentinel.py  test_x402.py  test_x402_circle_facilitator.py  test_x402_payer_capture.py
apps/trader/: Dockerfile  pyproject.toml  railway.toml
apps/trader/src/tests/: test_cross_area_integration.py  test_evidence_search_tool.py  test_gas_station.py  test_infra.py  test_registration.py  test_tool_first_trading.py  test_trader.py  test_treasury.py  test_validation_chain.py
apps/trader/src/trader/: __init__.py  __main__.py  agent.py  chain.py  config.py  ipfs.py  main.py  markets.py  persistence.py  pipeline.py  prompts.py  registration.py  trading_r1.py  treasury.py  validation.py
apps/trader/src/trader/tools/: __init__.py  evidence_search.py
data/calibration/: .gitignore
docs/: architecture.md  deployment-smoke.md  prism-plugins.md
docs/demos/: canonical-traces-20260517.md  cli-paid-validation-20260516T214837Z.json  cli-paid-validation-20260516T214837Z.md  external-call-20260513T225556+0000.md  external-call-20260513T230443+0000.md  external-call-20260517T203104+0000.md  final-demo-pack-20260516.md  self-serve-submit-20260515T101946Z.md  terminal-20260513T230434Z.txt
docs/droid-missions/: 2026-05-18-post-hackathon-product-hardening.md  2026-05-19-droid-factory-mission-list.md  2026-05-19-product-technical-roadmap.md
docs/protocol/: README.md  oracle-review.md  prism-protocol-v0.md  prism-report-v0.schema.json  receipt-verification-v0.md
docs/protocol/fixtures/: fail-closed-report.json  (+1 more)
docs/puzzles/: A2-circle-sdk-async-readable.md  A2-circle-sdk-async.json  A2-circle-sdk-async.min.json  A3-fastmcp-x402-readable.md  A3-fastmcp-x402.json  A3-fastmcp-x402.min.json
infra/circle/: paymaster.md
scripts/: call_prism_sentinel.py  smoke-trader-docker.sh
tests/: test_e2e_phase1.py  test_e2e_pipeline.py
tests/calibration/: _braintrust_helpers.py  conftest.py  test_braintrust_logs.py  test_braintrust_project.py  test_braintrust_sync.py  test_clean_replay.py  test_cli.py  test_eval_runs.py  test_freeze.py  test_freeze_split_polish.py  test_frozen_regression.py  test_gitignore.py  test_harvest_edge_cases.py  test_harvest_preflight.py  test_harvest_quarantine.py  test_harvest_rows.py  test_harvest_selection.py  test_holdout_policy.py  test_http_ipfs_fetcher.py  test_lineage.py  test_mutations.py  test_pilot_slice.py  test_prelabel.py  test_review_queue.py  test_review_roundtrip.py  test_review_routing.py  test_roundtrip.py  test_splits.py  test_synthetic_generation.py
(+134 files in other folders)
