[project]
name = "prism-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.uv.sources]
prism-schemas = { path = "packages/schemas-python", editable = true }
prism-trader = { path = "apps/trader", editable = true }
prism-sentinel = { path = "apps/sentinel", editable = true }

[tool.uv.workspace]
members = [
    "packages/schemas-python",
    "apps/trader",
    "apps/sentinel",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/trader/src/tests",
    "packages/schemas-python/src/tests",
]
markers = [
    "integration: marks tests that require external services (DB, IPFS, Circle SDK)",
]
