[project]
name = "prism-cli"
version = "0.1.0"
description = "Prism command-line client for trace inspection and public reporting."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.13",
    "rich>=13.9",
    "typer>=0.12",
]

[project.scripts]
prism = "prism_cli.app:main"
prism-cli = "prism_cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
