[project]
name = "prism-mcp"
version = "0.1.0"
description = "Prism MCP server — exposes the sentinel adversarial validator as an MCP tool."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9",
    "pydantic>=2.13",
    "structlog",
    "prism-schemas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_mcp"]

[tool.uv.sources]
prism-schemas = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (DB, IPFS, Circle SDK)",
]

[tool.mypy]
strict = true
python_version = "3.12"
