[project]
name = "prism-sentinel"
version = "0.1.0"
description = "Prism sentinel agent — GPT family, adversarial validation via DSPy."
requires-python = ">=3.12"
dependencies = [
    "dspy",
    "pydantic>=2.13",
    "structlog",
    "httpx",
    "psycopg[binary]",
    "circle-developer-controlled-wallets",
    "prism-schemas",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.uv.sources]
prism-schemas = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (DB, IPFS, Circle SDK)",
]

[tool.mypy]
strict = true
python_version = "3.12"
