[project]
name = "prism-trader"
version = "0.1.0"
description = "Prism trader agent - Claude family, Mirascope-based Trading-R1 reasoning."
requires-python = ">=3.12"
dependencies = [
    "mirascope[anthropic]",
    "pydantic>=2.13",
    "structlog",
    "httpx",
    "psycopg[binary]",
    "circle-developer-controlled-wallets",
    "prism-schemas",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.uv.sources]
prism-schemas = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (DB, IPFS, Circle SDK)",
]
